--- a/fundamentals/02-css/lesson-01-beginner.html
+++ b/fundamentals/02-css/lesson-01-beginner.html
@@ -1412,10 +1412,31 @@
         -->
         <div class="pc-focus">
           <h3>Pseudo-Class :focus</h3>
-          <label for="something"></label>
+
+          <label for="something">Type Something:</label>
           <input type="text" id="something" name="something" placeholder="Type something mate!">
+
           <p>The link here has a <a href="#">change in background and foreground color</a> as it is focused.</p>
+
           <button>Click Me!!</button>
+
+          <form>
+            <label for="flavors">Ice Cream Flavors:</label>
+            <select name="flavor" id="flavors">
+              <option>Cookie dough</option>
+              <option>Pistachio</option>
+              <option>Cookies & Cream</option>
+              <option>Cotton Candy</option>
+              <option>Lemon & Raspberry Sorbet</option>
+            </select>
+          </form>
+
+          <div class="toggle">
+            <label for="toggle1">Check the box to toggle me</label>
+            <input type="checkbox" id="toggle1"/>
+            <span></span>
+          </div>
+
         </div><br>
 
         <!--
