--- a/fundamentals/02-css/lesson-01-beginner.html
+++ b/fundamentals/02-css/lesson-01-beginner.html
@@ -1757,7 +1757,9 @@
             <a href="#">Hover over me!!</a>
           </div>
 
-          <div class="example-7"></div>
+          <div class="example-7">
+            <button class="glow" type="button">HOVER OVER & CLICK!</button>
+          </div>
         </div><br>
 
         <!--
